# ariel

./: .buildinfo  .gitignore  3_spider_vision_new.npy  CODE_OF_CONDUCT.html  DRONE_BLUEPRINT_PLAN.md  GENERALIST_QUICK_START.md  Multi-Task_Reinforcement_Learning_for_Quadrotors.md  PHASE_1_5_SUMMARY.md  README.md  SCHEMA.md  SPATIAL_EA_DOCUMENTATION.txt  TRAINING_QUICKSTART.md  baby_robot.py  blueprint.txt  generic_ea_settings.py  genindex.html  hex.json  index.html  library_knowledge_transfer.md  log.md  mujoco_additions.md  nohup.out  objects.inv  py-modindex.html  pyproject.toml  request_context.txt  requirements.txt  search.html  searchindex.js  train_gait.py  train_rl_policy.py  train_rotation.py  training_demo.py  visualize_robot.py
.claude/: README.md  settings.json
.doctrees/: CODE_OF_CONDUCT.doctree  environment.pickle  index.doctree
_sources/: index.md.txt
autoapi/: index.html
block/: manipualate_robot.py
docs/: CODE_OF_CONDUCT.md  conf.py  index.md
evogymtest/: evogym_helper.py  main.py  sensors.py
examples/: 0_render_single_frame.py  NN.py  _display_robot_from_json.py  _graph_to_robot.py  config.toml  evolution_dashboard.py  evolve.py  example.py  graph.json  lsystem_graph.json  morphology_fitness_analysis.py  mygraph.json  mygraph2.json  offspring1.json  offspring2.json  offspring3.json  offspring4.json  parent1-mutated.json  parent1.json  parent2-mutated.json  parent2.json  plotly_morphology_analysis.py  tree_genome_vis.py
himym/: cmaes_test_run.py  ea_config.py  ea_config.yaml  evolutionary_algo_continuous.py  evolutionary_algo_discrete.py  (+10 more)
(+941 files in other folders)
